docs/src/pages/index.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  background: none;
}

@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}

.heroLogo {
  max-width: 400px;
  width: 80%;
  margin-bottom: 1.5rem;
}

.heroSubtitle {
  font-size: 1.4rem;
  margin-bottom: 2rem;
  color: var(--ifm-color-emphasis-700);
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

